--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "cordova-android": "8.0.0",
     "core-js": "^2.5.4",
     "firebase": "^6.6.0",
+    "ngx-qrcode-all": "^1.2.1",
+    "ngx-qrcode2": "0.0.9",
     "ngx-webstorage-service": "^4.1.0",
+    "qrcode": "^1.4.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
