--- a/package.json
+++ b/package.json
@@ -1,100 +1,100 @@
 {
-  "name": "Libma",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~8.1.2",
-    "@angular/cdk": "~8.2.2",
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/fire": "^5.2.1",
-    "@angular/forms": "~8.1.2",
-    "@angular/material": "^8.2.2",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
-    "@ionic-native/barcode-scanner": "^5.13.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.7.1",
-    "angularx-qrcode": "^1.6.4",
-    "cordova-android": "8.0.0",
-    "cordova-browser": "^6.0.0",
-    "core-js": "^2.5.4",
-    "firebase": "^6.6.0",
-    "html-to-image": "^0.1.1",
-    "ng2-qrcode-reader": "0.0.1",
-    "ngx-qrcode-all": "^1.2.1",
-    "ngx-qrcode2": "0.0.9",
-    "ngx-webstorage-service": "^4.1.0",
-    "phonegap-plugin-barcodescanner": "^8.1.0",
-    "qrcode": "^1.4.1",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular-devkit/core": "~8.1.2",
-    "@angular-devkit/schematics": "~8.1.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
-    "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "~2.0.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {},
-      "phonegap-plugin-barcodescanner": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+    "name": "libma",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "https://ionicframework.com/",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
     },
-    "platforms": [
-      "android",
-      "browser"
-    ]
-  }
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~8.1.2",
+        "@angular/cdk": "~8.2.2",
+        "@angular/common": "~8.1.2",
+        "@angular/compiler": "~8.1.2",
+        "@angular/core": "~8.1.2",
+        "@angular/fire": "^5.2.1",
+        "@angular/forms": "~8.1.2",
+        "@angular/material": "^8.2.2",
+        "@angular/platform-browser": "~8.1.2",
+        "@angular/platform-browser-dynamic": "~8.1.2",
+        "@angular/router": "~8.1.2",
+        "@ionic-native/barcode-scanner": "^5.13.0",
+        "@ionic-native/core": "^5.0.0",
+        "@ionic-native/splash-screen": "^5.0.0",
+        "@ionic-native/status-bar": "^5.0.0",
+        "@ionic/angular": "^4.7.1",
+        "angularx-qrcode": "^1.6.4",
+        "cordova-android": "8.0.0",
+        "cordova-browser": "^6.0.0",
+        "core-js": "^2.5.4",
+        "firebase": "^6.6.0",
+        "html-to-image": "^0.1.1",
+        "ng2-qrcode-reader": "0.0.1",
+        "ngx-qrcode-all": "^1.2.1",
+        "ngx-qrcode2": "0.0.9",
+        "ngx-webstorage-service": "^4.1.0",
+        "phonegap-plugin-barcodescanner": "^8.1.0",
+        "qrcode": "^1.4.1",
+        "rxjs": "~6.5.1",
+        "tslib": "^1.9.0",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/architect": "~0.801.2",
+        "@angular-devkit/build-angular": "^0.803.23",
+        "@angular-devkit/core": "~8.1.2",
+        "@angular-devkit/schematics": "~8.1.2",
+        "@angular/cli": "~8.1.2",
+        "@angular/compiler": "~8.1.2",
+        "@angular/compiler-cli": "~8.1.2",
+        "@angular/language-service": "~8.1.2",
+        "@ionic/angular-toolkit": "~2.0.0",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
+        "codelyzer": "^5.0.0",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^4.1.1",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "jasmine-core": "~3.4.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.1.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.15.0",
+        "typescript": "~3.4.3"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {
+                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+            },
+            "cordova-plugin-ionic-keyboard": {},
+            "phonegap-plugin-barcodescanner": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            }
+        },
+        "platforms": [
+            "android",
+            "browser"
+        ]
+    }
 }
